; ModuleID = '/home/carl/AnghaBench/zfs/lib/libzpool/extr_taskq.c_system_taskq_init.c'
source_filename = "/home/carl/AnghaBench/zfs/lib/libzpool/extr_taskq.c_system_taskq_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [13 x i8] c"system_taskq\00", align 1
@maxclsyspri = common dso_local global i32 0, align 4
@TASKQ_DYNAMIC = common dso_local global i32 0, align 4
@TASKQ_PREPOPULATE = common dso_local global i32 0, align 4
@system_taskq = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [12 x i8] c"delay_taskq\00", align 1
@system_delay_taskq = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @system_taskq_init() #0 {
  %1 = load i32, i32* @maxclsyspri, align 4
  %2 = load i32, i32* @TASKQ_DYNAMIC, align 4
  %3 = load i32, i32* @TASKQ_PREPOPULATE, align 4
  %4 = or i32 %2, %3
  %5 = call i8* @taskq_create(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 64, i32 %1, i32 4, i32 512, i32 %4)
  store i8* %5, i8** @system_taskq, align 8
  %6 = load i32, i32* @maxclsyspri, align 4
  %7 = load i32, i32* @TASKQ_DYNAMIC, align 4
  %8 = load i32, i32* @TASKQ_PREPOPULATE, align 4
  %9 = or i32 %7, %8
  %10 = call i8* @taskq_create(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i32 4, i32 %6, i32 4, i32 512, i32 %9)
  store i8* %10, i8** @system_delay_taskq, align 8
  ret void
}

declare dso_local i8* @taskq_create(i8*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
